--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Pacifico&display=swap");
+      @font-face {
+        font-family: "TuskerGrotesk";
+        font-style: normal;
+        font-weight: 400;
+        src: url(public/font/TuskerGrotesk-3800Super.otf) format("opentype"),
+          url(public/font/TuskerGrotesk-3800Super.ttf) format("ttf");
+      }
     </style>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="images\favicon.png" />
