--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     </style>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="images\favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"
+    />
     <title>Dev.Shin</title>
   </head>
   <body>
